<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strFeedbackScore" />

    <RatingBar
        android:id="@+id/rbFeedbackScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:stepSize="1"/>

    <TextView
        android:id="@+id/tvFeedbackScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strFeedbackScore4" 
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strFeedbackSuggestions" />

    <EditText
        android:id="@+id/editFeedback"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.27"
        android:inputType="textMultiLine" 
        android:gravity="top" 
        android:nextFocusForward="@+id/btnDone">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strFeedbackBtnSend" 
        android:layout_gravity="right"/>

</LinearLayout>