<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <ExpandableListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:background="@drawable/postit"
        android:cacheColorHint="#00000000"
        android:gravity="top"
        android:descendantFocusability="blocksDescendants" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:backgroundTint="@android:color/background_dark"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/lblCompraActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strCompraActual"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCompraActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="0"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblCompraTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strCompraTotal"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCompraTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="0"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@android:color/transparent"
        android:gravity="bottom|right"
        android:visibility="visible"
        android:weightSum="3">

        <Button
            android:id="@+id/btnScan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strScan"
            android:visibility="visible" />
        <!-- Button
   			android:id="@+id/btnDatosEjemplo" 
   			android:layout_width="wrap_content" 
   			android:layout_height="wrap_content"
   			android:text="@string/strMenuDatosEjemplo"
   			android:layout_weight="0"
   			android:gravity="center_vertical" android:layout_gravity="center_vertical" android:textSize="8dp"/-->
        <Button
            android:id="@+id/btnUncheckAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/strMenuUncheckAll" />

        <Button
            android:id="@+id/btnEditList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strEditList" />
    </LinearLayout>
</LinearLayout>
