<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:background="#DD000099">
    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
		    <TextView
			    android:text="@string/strNombre" 
		    	android:textColor="@android:color/primary_text_dark"
	    		android:lines="1" 
	    		android:maxLines="1" 
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="top"/>

			<EditText
				android:id="@+id/newProduct_Nombre"
				style="@android:style/Widget.DeviceDefault.EditText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="top"
				android:layout_weight="1"
				android:inputType="textCapSentences"
				android:maxLines="1"
				android:textColor="@android:color/primary_text_dark" />
        </TableRow>
        <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView
		    	android:text="@string/strPrecio" 
		    	android:textColor="@android:color/primary_text_dark"
	    		android:lines="1" 
	    		android:maxLines="1" 
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"  
	    		android:layout_gravity="top"/>

			<EditText
				android:id="@+id/newProduct_Precio"
				style="@android:style/Widget.DeviceDefault.EditText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top"
				android:layout_weight="1"
				android:inputType="numberDecimal"
				android:maxLines="1"
				android:textColor="@android:color/primary_text_dark" />
		</TableRow>
        <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView
		    	android:text="@string/strBarcode" 
		    	android:textColor="@android:color/primary_text_dark"
	    		android:lines="1" 
	    		android:maxLines="1" 
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"  
	    		android:layout_gravity="top"/>
	    	<EditText  android:id="@+id/newProduct_Barcode"
				style="@android:style/Widget.DeviceDefault.EditText"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="top"
	    		android:layout_weight="1"
	    		android:maxLines="1"
	    		android:inputType="numberDecimal"
				android:textColor="@android:color/white" />
			<ImageButton
    			android:src="@android:drawable/ic_menu_camera"
    			android:contentDescription="@string/strBarcode" 
			    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:id="@+id/btnScan"
    			android:clickable="true"
    			android:background="@null" />
        </TableRow>
        <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
		    <TextView
		    	android:text="@string/strShop" 
		    	android:textColor="@android:color/primary_text_dark"
	    		android:lines="1" 
	    		android:maxLines="1" 
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"  
	    		android:layout_gravity="top"/>

            <AutoCompleteTextView
                android:id="@+id/newProduct_Shop"
                style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="right">

            <Button
                android:id="@+id/btnNewProduct_Cancel"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCancel" />

            <Button
                android:id="@+id/btnNewProduct_Crear"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCrearProducto" />
        </TableRow>
    </TableLayout>
</LinearLayout>
